# practice_spark

./: .gitignore  BACKLOG.md  CURRICULUM.md  DEPLOYMENT.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  vercel.json
.github/workflows/: deploy.yml
apps/api/: .env.example  .env.prod.example  Dockerfile  auth.py  database.py  errors.py  executor.py  github.py  loader.py  main.py  pyproject.toml  requirements.txt  sandbox.py  stripe_sync.py
apps/web/: middleware.ts  next.config.ts  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/problems/: page.tsx
apps/web/app/problems/[id]/: page.tsx
apps/web/app/sign-in/[[...sign-in]]/: page.tsx
apps/web/app/sign-up/[[...sign-up]]/: page.tsx
apps/web/lib/: api.ts  constants.ts  pythonValidator.ts  sparkDataframeCompletions.ts  sparkSqlCompletions.ts  sqlValidator.ts
docker/spark/: Dockerfile
nginx/: nginx.conf  nginx.local.conf
scripts/: setup_server.sh  validate_problems.py
